# rimo_zoom_bot_manager

./: .clang-format  .env  .gitignore  CMakeLists.txt  README.md  build_and_run.sh  install_dependencies.sh  install_dev_dependencies.sh
include/: types.hpp
scripts/: install_dependencies.sh
src/: __main.cpp  env_context.cpp  main.cpp
